fixed overscrolling on IOS by making all elements fixed only when Javascript is enabled

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -62,7 +62,7 @@ body {
   color: #ddd;
   background-color: #568;
   text-align: center;
-  transition: margin 1s;
+  transition: top 1s;
 }
 
 .navigation--item {
@@ -95,7 +95,7 @@ body {
   background-color: #eee;
   padding-top: 30px;
   padding-bottom: 30px;
-  transition: margin 1s;
+  transition: top 1s;
 }
 
 #profile--name {
